crates/test-ui/ui/define_class_invalid_syntax2.stderr
error[E0692]: transparent struct cannot have other repr hints
 --> ui/define_class_invalid_syntax2.rs
  |
  | / define_class!(
  | |     #[unsafe(super(NSObject))]
  | |     #[repr(transparent)]
  | |            ^^^^^^^^^^^
  | |     struct HasRepr;
  | | );
  | |_^
  |
  = note: this error originates in the macro `$crate::__define_class_inner` which comes from the expansion of the macro `define_class` (in Nightly builds, run with -Z macro-backtrace for more info)
